--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -10,7 +10,7 @@ body {
     padding: 0;
     margin: 0;
     line-height: 1.6;
-    color: #404040;
+    color: #4c4e6e;
     letter-spacing: 1.1px;
 }
 
